@@ -3,7 +3,7 @@
 \title{sample_size}
 \usage{
 sample_size(m = 10000, m1 = 100, power = 0.8, f = 0.1, w = 1,
-  rho = 2, lambda0 = 5, phi_0 = 1, showMessage = F)
+  rho = 2, mu0 = 5, phi_0 = 1, showMessage = F)
 }
 \arguments{
   \item{m}{Total number of genes for testing.}
@@ -20,7 +20,7 @@ sample_size(m = 10000, m1 = 100, power = 0.8, f = 0.1, w = 1,
   \item{rho}{minimum fold changes for prognostic genes
   between two groups.}
 
-  \item{lambda0}{Average read counts for prognostic genes.}
+  \item{mu0}{Average read counts for prognostic genes.}
 
   \item{phi_0}{Dispersion for prognostic genes.}
 
@@ -33,7 +33,7 @@ expression analysis of RNA-seq data.
 }
 \examples{
 #Input initial parameters.
-vm<-10000;vm1<-100;vpower<-0.8;vf<-0.05;vw<-1.0;vrho<-2.0;vlambda0<-5;vphi_0<-2
-sample_size(m=vm, m1=vm1, power=vpower, f=vf, w=vw, rho=vrho, lambda0=vlambda0, phi_0=vphi_0)
+vm<-10000;vm1<-100;vpower<-0.8;vf<-0.05;vw<-1.0;vrho<-2.0;vmu0<-5;vphi_0<-2
+sample_size(m=vm, m1=vm1, power=vpower, f=vf, w=vw, rho=vrho, mu0=vmu0, phi_0=vphi_0)
 }
 
